--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "dayjs": "^1.11.7",
     "highcharts": "^10.3.3",
     "highcharts-border-radius": "^0.0.4",
     "highcharts-react-official": "^3.2.0",
