--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "highcharts": "^10.3.3",
     "highcharts-border-radius": "^0.0.4",
