--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -6,7 +6,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${DATABASE_URL}
+    url: jdbc:mysql://mysql-container/stockey?serverTimezone=Asia/Seoul
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
 
@@ -22,3 +22,35 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug
+
+
+redis:
+  lettuce:
+    pool:
+      max-active: 10
+      max-idle: 10
+      min-idle: 2
+  port: 6379
+  host: 'redis-container'
+  password: 'ssafy'
+
+# springdoc swagger
+springdoc:
+  api-docs:
+    path: /docs # 접속 path 설정
+  swagger-ui:
+    path: /swagger-ui # 접속 path 설정
+
+
+kakaoOauth:
+  REST_API_KEY: ${KAKAO_KEY}
+  REDIRECT_URL: ${KAKAO_REDIRECT_KEY}
+
+
+jwt:
+  # base64로 인코딩된 암호 키, HS512를 사용할 것이기 때문에, 512비트(64바이트) 이상이 되어야 합니다. 길게 써주세요
+  secretKey: ${JWT_KEY}
+  access:
+    expiration: 100
+  refresh:
+    expiration: 14400
