--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -42,8 +42,8 @@ springdoc:
 
 
 kakaoOauth:
-  REST_API_KEY: ${KAKAO_KEY}
-  REDIRECT_URL: ${KAKAO_REDIRECT_KEY}
+  REST_API_KEY: 204f458585e0229e8443cd7bc1be5c5e
+  REDIRECT_URL: http://j8a508.p.ssafy.io:8080/oauth/kakao
 
 
 jwt:
