chore : dockerfile 수정

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,11 @@
 # Use an official Node.js runtime as the base image
 FROM node:latest
 
-# Set the working directory in the container
-WORKDIR /app
-
-# Copy the package.json and package-lock.json files
-COPY package*.json ./
+# Copy the React project files
+COPY . .
 
 # Install the dependencies
 RUN npm install
-
-# Copy the React project files
-COPY . .
 
 # Build the Vue project
 RUN npm run build
@@ -23,10 +17,10 @@ FROM nginx
 RUN rm /etc/nginx/conf.d/default.conf
 
 # host pc 의 nginx.conf 를 아래 경로에 복사
-COPY ./nginx.conf /etc/nginx/conf.d
+COPY /home/ubuntu/react/conf.d /etc/nginx/conf.d
 
 # Copy the build files to the Nginx web root directory
-COPY --from=0 /app/dist /usr/share/nginx/html
+COPY --from=0 /build /usr/share/nginx/html
 
 # Expose port 3000
 EXPOSE 3000
