chore : nginx 설정 파일 추가

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,13 @@
-# Use an official Node.js runtime as the base image
 FROM node:latest
 
-# Copy the React project files
-COPY . .
+WORKDIR /app
 
-# Install the dependencies
+COPY package*.json ./
+
 RUN npm install
 
-# Build the Vue project
+COPY . .
+
 RUN npm run build
 
 # Use Nginx as the web server
@@ -17,10 +17,10 @@ FROM nginx
 RUN rm /etc/nginx/conf.d/default.conf
 
 # host pc 의 nginx.conf 를 아래 경로에 복사
-COPY /home/ubuntu/react/default.conf /etc/nginx/conf.d
+COPY ./default.conf /etc/nginx/conf.d/default.conf
 
 # Copy the build files to the Nginx web root directory
-COPY --from=0 /build /usr/share/nginx/html
+COPY --from=0 /app/build /usr/share/nginx/html
 
 # Expose port 3000
 EXPOSE 3000
