--- a/djangoServer/requirements.txt
+++ b/djangoServer/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.3
 colorama==0.4.6
 dataclasses==0.6
 Django==4.1.7
+django-cors-headers==3.14.0
 djangorestframework==3.14.0
 filelock==3.10.7
 huggingface-hub==0.13.3
