--- a/djangoServer/Dockerfile
+++ b/djangoServer/Dockerfile
@@ -1,14 +1,22 @@
 # Use an official Python runtime as the base image
-FROM python:3.10
+FROM python:3.10.9
+
+ENV PYTHONUNBUFFERED = 1
+
+RUN apt-get -y update
+RUN mkdir /app
 
 # Set the working directory to /app
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . /app
+COPY requirements.txt /app/
 
 # Install required packages
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
+
+# Copy the current directory contents into the container at /app
+COPY . /app/
 
 # Expose the port 7777
 EXPOSE 8000
