feat : entity 수정(v2 테이블 용) 및 설정파일 수정(ddl none + sql 출력 false)

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -14,8 +14,8 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: update
-    show-sql: true
+      ddl-auto: none
+    show-sql: false
     properties:
       hibernate.format_sql: true
 
